--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "web-audio-midi-synth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel serve src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "parcel": "^2.6.1",
-    "process": "^0.11.10",
+  "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "parcel": "^2.6.1",
+    "process": "^0.11.10"
   }
 }
